Use Pre-commit and pyproject.toml for linting

--- a/tox.ini
+++ b/tox.ini
@@ -5,16 +5,8 @@
 
 [tox]
 basepython = python3.9
-envlist = py39, black, linters
+envlist = py39, linters
 skipsdist = true
-
-[coverage:run]
-# entry.py is not loaded directly and thus coverage cannot be ascertained
-omit = **/entry.py
-
-[coverage:report]
-exclude_lines =
-  FileNotFoundError = OSError
 
 [testenv]
 basepython = python3.9
@@ -26,31 +18,8 @@ deps =
 exclude =
     plugins/_build
 
-[testenv:black]
-skip_install = true
-deps = black
-commands = black --skip-string-normalization .
-
-[flake8]
-exclude =
-    .tox
-    .eggs
-    plugins/_build
-show-source = true
-max-line-length = 99
-application-import-names = plugins
-# W503: line break before binary operator
-# E203: whitespace before ':' warnings
-# F821: undefined. Because of injected _execfiles, target, etc.
-ignore = E203, W503, F821
-
 [testenv:linters]
 basepython = python3.10
 skip_install = true
-deps =
-    flake8
-    flake8-colors
-    black
-commands =
-    black --skip-string-normalization --check .
-    flake8 .
+deps = pre-commit
+commands = pre-commit run --all-files
