--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -71,6 +71,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D712"));
     }
 
+    class "SnomD713" {
+        match if option vendor-class-identifier = "snomD713";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom D713"));
+    }
+
     class "Snom715" {
         match if option vendor-class-identifier = "snom715";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom 715"));
