--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
     rev: '6.1.0'
     hooks:
       - id: flake8
-        # Required to make flake8 read fdrom pyproject.toml for now :(
+        # Required to make flake8 read from pyproject.toml for now :(
         additional_dependencies: ["flake8-pyproject"]
   - repo: https://github.com/psf/black
     rev: 23.12.0
@@ -15,10 +15,10 @@ repos:
     rev: v3.15.0
     hooks:
       - id: pyupgrade
-        args: [--py39-plus]
+        args: [--py37-plus, --keep-runtime-typing]
 # Automatically sort and format imports (in black compatible way)
   - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
       - id: isort
         args: [--filter-files]
@@ -29,7 +29,9 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
+        args: [--unsafe]
       - id: check-toml
+      - id: check-json
   - repo: https://github.com/wazo-platform/wazo-git-hooks
     rev: 1.1.1
     hooks:
