Makefile: fix wrong option name

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -19,7 +19,7 @@ REMOTE_FIRMWARES_PATH := /var/www/provd/firmwares
 .PHONY : download
 download :
 	mkdir -p $(TESTING_PATH)
-	rsync -v --recurse --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_TESTING_PATH)/ $(TESTING_PATH)
+	rsync -v --recursive --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_TESTING_PATH)/ $(TESTING_PATH)
 
 .PHONY : build
 build :
@@ -33,13 +33,13 @@ build :
 
 .PHONY : upload
 upload : build
-	rsync -v --recurse --times --delete $(TESTING_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_TESTING_PATH)
+	rsync -v --recursive --times --delete $(TESTING_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_TESTING_PATH)
 
 
 .PHONY : download-stable
 download-stable :
 	mkdir -p $(STABLE_PATH)
-	rsync -v --recurse --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_STABLE_PATH)/ $(STABLE_PATH)
+	rsync -v --recursive --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_STABLE_PATH)/ $(STABLE_PATH)
 
 
 .PHONY : build-stable
@@ -50,13 +50,13 @@ build-stable :
 
 .PHONY : upload-stable
 upload-stable : build-stable
-	rsync -v --recurse --times --delete $(STABLE_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_STABLE_PATH)
+	rsync -v --recursive --times --delete $(STABLE_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_STABLE_PATH)
 
 
 .PHONY : download-archive
 download-archive :
 	mkdir -p $(ARCHIVE_PATH)
-	rsync -v --recurse --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_ARCHIVE_PATH)/ $(ARCHIVE_PATH)
+	rsync -v --recursive --times --delete $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_ARCHIVE_PATH)/ $(ARCHIVE_PATH)
 
 
 .PHONY : build-archive
@@ -67,19 +67,19 @@ build-archive :
 
 .PHONY : upload-archive
 upload-archive : build-archive
-	rsync -v --recurse --times --delete $(ARCHIVE_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_ARCHIVE_PATH)
+	rsync -v --recursive --times --delete $(ARCHIVE_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_ARCHIVE_PATH)
 
 
 .PHONY : download-firmwares
 download-firmwares :
 	mkdir -p $(FIRMWARES_PATH)
-	rsync -v --recurse --times $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_FIRMWARES_PATH)/ $(FIRMWARES_PATH)
+	rsync -v --recursive --times $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_FIRMWARES_PATH)/ $(FIRMWARES_PATH)
 
 
 .PHONY : upload-firmwares
 upload-firmwares:
 	chmod +r $(FIRMWARES_PATH)/*
-	rsync -v --recurse --times $(FIRMWARES_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_FIRMWARES_PATH)
+	rsync -v --recursive --times $(FIRMWARES_PATH)/ $(REMOTE_USER)@$(REMOTE_HOST):$(REMOTE_FIRMWARES_PATH)
 
 
 .PHONY : clean
