--- a/dhcp/dhcp/dhcpd_update/yealink.conf
+++ b/dhcp/dhcp/dhcpd_update/yealink.conf
@@ -22,3 +22,8 @@ subclass "voip-mac-address-prefix" 1:24:9A:D8 {
     option tftp-server-name = config-option VOIP.http-server-uri;
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:24:9A:D8"));
 }
+
+subclass "voip-mac-address-prefix" 1:44:DB:D2 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:44:DB:D2"));
+}
