--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,10 @@
-# Tox (http://tox.testrun.org/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-basepython = python3.9
-envlist = py39, linters
-skipsdist = true
+base_python = python3.9
+env_list = py39, linters
+no_package = true
 
 [testenv]
-basepython = python3.9
+base_python = python3.9
 commands =
     pytest --junitxml=unit-tests.xml --cov=plugins --cov-report term --cov-report xml:coverage.xml --ignore plugins/_build/ {posargs} plugins
 deps =
@@ -19,7 +14,7 @@ exclude =
     plugins/_build
 
 [testenv:linters]
-basepython = python3.10
+base_python = python3.10
 skip_install = true
 deps = pre-commit
 commands = pre-commit run --all-files
