--- a/dhcp/dhcp/dhcpd_update/yealink.conf
+++ b/dhcp/dhcp/dhcpd_update/yealink.conf
@@ -27,3 +27,13 @@ subclass "voip-mac-address-prefix" 1:44:DB:D2 {
     option tftp-server-name = config-option VOIP.http-server-uri;
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:44:DB:D2"));
 }
+
+subclass "voip-mac-address-prefix" 1:64:4F:56 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:64:4F:56"));
+}
+
+subclass "voip-mac-address-prefix" 1:EC:1D:A9 {
+    option tftp-server-name = config-option VOIP.http-server-uri;
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Yealink PREFIX 1:EC:1D:A9"));
+}
