--- a/dhcp/dhcp/dhcpd_update/aastra.conf
+++ b/dhcp/dhcp/dhcpd_update/aastra.conf
@@ -108,3 +108,10 @@ subclass "voip-mac-address-prefix" 1:08:00:0f {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Aastra PREFIX 1:08:00:0f"));
     }
 }
+
+subclass "voip-mac-address-prefix" 1:14:00:e9 {
+    if not exists vendor-class-identifier or not (substring(option vendor-class-identifier, 0, 13) = "MitelIPPhone") {
+        option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Aastra");
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Mitel PREFIX 1:14:00:e9"));
+    }
+}
