Fix DHCP & common files

--- a/dhcp/dhcp/dhcpd_update/snom.conf
+++ b/dhcp/dhcp/dhcpd_update/snom.conf
@@ -159,6 +159,11 @@ group {
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom M300"));
     }
 
+    class "SnomM400" {
+        match if substring(option vendor-class-identifier, 0, 8) = "snomM400";
+        log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom M400"));
+    }
+
     class "SnomM700" {
         match if substring(option vendor-class-identifier, 0, 8) = "snomM700";
         log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT Snom M700"));
