--- a/zuul.yaml
+++ b/zuul.yaml
@@ -17,12 +17,12 @@
     wazo-check:
       jobs:
         - wazo-tox-linters-provd:
-            nodeset: pod-python-py311
+            nodeset: vm-debian-12-m1s
         - wazo-provd-plugins:
             nodeset: vm-debian-12-m1s
     wazo-gate:
       jobs:
         - wazo-tox-linters-provd:
-            nodeset: pod-python-py311
+            nodeset: vm-debian-12-m1s
         - wazo-provd-plugins:
             nodeset: vm-debian-12-m1s
