--- a/dhcp/dhcp/dhcpd_update/grandstream.conf
+++ b/dhcp/dhcp/dhcpd_update/grandstream.conf
@@ -7,3 +7,8 @@ subclass "voip-mac-address-prefix" 1:c0:74:ad {
     option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Grandstream");
     log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT GrandStream PREFIX 1:c0:74:ad"));
 }
+
+subclass "voip-mac-address-prefix" 1:ec:74:d7 {
+    option tftp-server-name = concat(config-option VOIP.http-server-uri, "/Grandstream");
+    log(concat("[", binary-to-ascii(16, 8, ":", hardware), "] ", "BOOT GrandStream PREFIX 1:ec:74:d7"));
+}
